<resources>
    <string name="app_name">DiskusiNow</string>

    <!--  Room Information Activity  -->
    <string name="information_room">Informasi Ruangan</string>
    <string name="name_room1">Ruang 1A</string>
    <string name="name_room2">Ruang 1B</string>
    <string name="name_room3">Ruang 2A</string>
    <string name="name_room4">Ruang 2B</string>
    <string name="name_floor">Lantai 1</string>
    <string name="name_floor2">Lantai 4</string>
    <string name="name_capasity">Kapasitas 5 orang</string>
    <string name="name_keterangan">Keterangan waktu</string>
    <string name="name_status1">Belum dipesan</string>
    <string name="name_status2">Sudah dipesan</string>
    <string name="time1">08:00</string>
    <string name="time2">09:00</string>
    <string name="time3">10:00</string>
    <string name="time4">11:00</string>
    <string name="time5">13:00</string>
    <string name="time6">14:00</string>
    <string name="time7">15:00</string>
    <string name="time8">16:00</string>
    <!--  Room Information Activity  -->

    <!--  History Activity  -->
    <string name="history_page">Riwayat Pemesanan</string>
    <string name="confirm">Terkonfirmasi</string>
    <string name="cancel">Dibatalkan</string>
    <string name="result_page">Hasil Pemesanan</string>

    <!--  Dummy Data History Activity  -->
    <string name="room_history">Ruang Diskusi 2B</string>
    <string name="capacity_history">4 orang</string>
    <string name="description_history">Presentasi internal untuk menyampaikan hasil riset pasar.</string>
    <string name="id_history">#0512</string>
    <string name="date_history">10 Maret 2024</string>
    <string name="name_history">Ryan Gosling</string>
    <string name="phone_number_history">083812721450</string>
    <string name="start_time_history">15:00</string>
    <string name="sd">s/d</string>
    <string name="end_time_history">16:00</string>

    <string name="room_history2">Ruang Diskusi 1B</string>
    <string name="capacity_history2">6 orang</string>
    <string name="description_history2">Sesi Brainstorming untuk pengembangan strategi pemasaran produk baru.</string>
    <string name="id_history2">#0335</string>
    <string name="date_history2">20 Oktober 2023</string>
    <string name="name_history2">Timothée Chalamet</string>
    <string name="phone_number_history2">08372323450</string>
    <string name="start_time_history2">17:00</string>
    <string name="end_time_history2">18:00</string>

    <string name="room_history3">Ruang Diskusi 2A</string>
    <string name="capacity_history3">8 orang</string>
    <string name="description_history3">Rapat Tim Proyek X untuk pembahasan status proyek dan perencanaan strategi ke depan.</string>
    <string name="id_history3">#0061</string>
    <string name="date_history3">06 Januari 2024</string>
    <string name="name_history3">Madison Beer</string>
    <string name="phone_number_history3">083812721450</string>
    <string name="start_time_history3">09:00</string>
    <string name="end_time_history3">10:00</string>
    <!--  Dummy Data History Activity  -->
    <!--  History Activity  -->

    <!--  AboutUs Activity  -->
    <string name="about_us">Tentang Kami</string>
    <string name="span">*</string>
    <string name="announcement_history">Temukan semua detail pemesanan ruangan Anda di menu Riwayat. Jadi, jika Anda perlu memeriksa pemesanan sebelumnya, cukup buka menu Riwayat. Terima kasih!</string>
    <string name="star_span">*</string>
    <string name="explain_app">DiskusiNow memberikan akses instan ke ruang diskusi yang Anda butuhkan tanpa kerumitan. Dengan aplikasi ini, Anda dapat dengan mudah melihat ketersediaan ruang diskusi di Perpustakaan UPN Veteran Jakarta dan memesan langsung melalui perangkat seluler Anda. Rencanakan pertemuan kelompok, rapat organisasi, atau sesi belajar tanpa hambatan. Dapatkan notifikasi real-time dan pengingat untuk memastikan Anda tidak melewatkan pertemuan apa pun. DiskusiNow meningkatkan efisiensi dan kemudahan dalam pemesanan ruang diskusi di Perpustakaan UPN Veteran Jakarta melalui aplikasi berbasis Android.</string>
    <string name="made_by">Aplikasi ini dibangun oleh: </string>
    <string name="weare">Wisnu Andika - 2110511043\n
        Rizky Al Arief - 2110511069\n
        Muharim Awaluddin - 2110511074</string>
    <!--  AboutUs Activity  -->

    <!--  Contact Us Activity  -->
    <string name="contact_us">Hubungi Kami</string>
    <string name="contact_us_description">Butuh bantuan atau punya pertanyaan? jangan ragu untuk menghubungi kami untuk segala keperluan terkait aplikasi ini</string>

    <string name="contact_us_form_name">Nama</string>
    <string name="contact_us_form_name_hint">Masukan Nama Anda</string>

    <string name="contact_us_form_email">Email</string>
    <string name="contact_us_form_email_hint">Masukan Email Anda</string>

    <string name="contact_us_form_message">Pesan</string>
    <string name="contact_us_form_message_hint">Masukan Pesan Anda</string>
    <string name="submit">Submit</string>
    <!--  Contact Us Activity  -->

    <!--  Log In Activity  -->
    <string name="login_welcome">Selamat datang kembali!</string>
    <string name="login_welcome_description">Masuklah ke akun Anda untuk melanjutkan.</string>

    <string name="login_email">Email</string>
    <string name="login_email_hint">Masukkan Email Anda</string>

    <string name="login_password">Kata Sandi</string>
    <string name="login_password_hint">Masukkan Kata Sandi Anda</string>

    <string name="login_forget_password">Lupa Kata Sandi?</string>

    <string name="login_button">Masuk</string>
    <style name="register_nutton">Daftar</style>

    <string name="login_dont_have_account">Belum mempunyai akun?</string>
    <string name="login_click_here">Daftar di sini</string>
    <!--  Log In Activity  -->

    <!--  Register Activity  -->
    <string name="register_welcome">Bergabunglah dengan kami!</string>
    <string name="register_welcome_description">Daftarlah untuk mendapatkan akses penuh ke layanan kami.</string>
    <string name="register_name">Nama Lengkap</string>
    <string name="register_name_hint">Masukkan Nama Lengkap Anda</string>
    <string name="register_nim">Nim</string>
    <string name="register_nim_hint">Masukkan Nim Anda</string>
    <string name="register_password_hint_confirm">Masukkan Kembali Kata Sandi Anda</string>
    <string name="register_confirm_password">Konfirmasi Kata Sandi</string>
    <string name="register_button">Daftar</string>
    <string name="register_already_have_account">Sudah mempunyai akun?</string>
    <string name="register_click_here">Masuk di sini</string>
    <!--  Register Activity  -->

    <!--  Form Main Activity  -->
    <string name="form_welcome">Selamat Datang di DiskusiNow!</string>
    <string name="form_welcome_description">Silakan isi formulir di bawah ini untuk memesan ruang diskusi kami.</string>
    <string name="form_no_contact">Nomor Kontak</string>
    <string name="form_no_contact_hint">Masukan Nomor Kontak Anda</string>
    <string name="form_date">Tanggal Pemesanan</string>
    <string name="form_date_hint">DD/MM/YYYY</string>
    <string name="form_room">Ruangan</string>
    <string name="form_room_hint">Pilih Ruangan</string>
    <string name="form_start_time">Waktu Mulai</string>
    <string name="form_start_time_hint">--:--</string>
    <string name="form_total_participant">Jumlah Peserta</string>
    <string name="form_description">Keterangan Keperluan</string>
    <string name="form_description_hint">Masukan Keterangan Keperluan Anda</string>
    <string name="form_notes">Catatan Penting: Jika Anda tidak tiba di resepsionis dalam waktu 10 menit setelah waktu mulai yang Anda tentukan, reservasi Anda akan otomatis dibatalkan.</string>

    <string name="choice_time">Pilih Waktu</string>
    <string-array name="time_picker">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
    </string-array>
    <string-array name="form_room_spinner">
        <item>Pilih Ruangan</item>
        <item>Ruang 1A</item>
        <item>Ruang 1B</item>
        <item>Ruang 2A</item>
        <item>Ruang 2B</item>
    </string-array>
    <!--  Form Main Activity  -->

    <!--  Navigation Drawer Activity  -->
    <string name="drawer_history">Riwayat Pemesanan</string>
    <string name="drawer_about_us">Tentang DiskusiNow</string>
    <string name="drawer_contact_us">Hubungi Kami</string>
    <string name="drawer_privacy">Kebijakan dan Privasi</string>
    <string name="drawer_out">Keluar</string>
    <!--  Navigation Drawer Activity  -->
</resources>