<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/cardBackgroundColor"
    app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="32dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/btn_close_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_marginBottom="16dp"
                android:layout_gravity="end"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green_900"
                android:fontFamily="@font/inter_bold"
                android:text="@string/result_page"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/tv_result_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/id_history"
                    android:textColor="@color/green_900"/>
                <TextView
                    android:id="@+id/tv_result_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/date_history"
                    android:textColor="@color/green_900"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_result_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/name_history"
                android:textColor="@color/green_900"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_result_no_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/phone_number_history"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_result_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time_history"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/sd"/>

                <TextView
                    android:id="@+id/tv_result_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time_history"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_result_room"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/room_history"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/inter"/>

            <LinearLayout
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_result_participant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4"/>
                <TextView
                    android:layout_marginStart="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="orang"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_result_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/description_history"
                android:layout_marginBottom="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/span"
                    android:textColor="@color/red"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/inter_bold"
                    android:justificationMode="inter_word" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/form_notes"
                    android:justificationMode="inter_word"
                    android:fontFamily="@font/inter_bold" />
            </LinearLayout>
        </LinearLayout>
</com.google.android.material.card.MaterialCardView>